google login resolver 테스트코드 추가